tests/baselines/reference/YieldExpression9_es6.errors.txt
tests/cases/conformance/es6/yieldExpressions/YieldExpression9_es6.ts(2,9): error TS2552: Cannot find name 'foo'. Did you mean 'v'?


==== tests/cases/conformance/es6/yieldExpressions/YieldExpression9_es6.ts (1 errors) ====
    var v = function*() {
      yield(foo);
            ~~~
!!! error TS2552: Cannot find name 'foo'. Did you mean 'v'?
    }